--- a/forgeup/install
+++ b/forgeup/install
@@ -54,6 +54,10 @@ if [[ "$FORGEUP_REPO" == "gakonst/foundry" && -z "$FORGEUP_BRANCH" ]]; then
 
   # Curl and unzip the downloaded Foundry tarball.
   curl -L https://github.com/gakonst/foundry/releases/download/${FORGEUP_VERSION}/foundry_${FORGEUP_VERSION}_${PLATFORM}_${ARCHITECTURE}.tar.gz | tar xvz
+
+  # Move forge and cast into the cargo bin, so they can be used as commands.
+  mv forge $HOME/.cargo/bin/forge
+  mv cast $HOME/.cargo/bin/cast
 else 
   FORGEUP_BRANCH=${FORGEUP_BRANCH-master}
   
@@ -70,7 +74,7 @@ else
     cd $REPO_PATH
     git pull
     git checkout ${BRANCH}
-     git pull
+    git pull
     cargo install --path ./cli --bins --locked --force
   else
     # Repo path didnt exist, grab the author from the repo, make a directory in .foundry, cd to it, clone and install.
