fix(forgeup): remove -i

--- a/forgeup/install
+++ b/forgeup/install
@@ -44,7 +44,7 @@ if [[ "$FORGEUP_REPO" == "gakonst/foundry" && -z "$FORGEUP_BRANCH" ]]; then
   ARCHITECTURE="$(uname -m)"
 
   if [ "${ARCHITECTURE}" = "x86_64" ]; then
-    if [ "$(sysctl -in sysctl.proc_translated)" = "1" ]; then
+    if [ "$(sysctl -n sysctl.proc_translated)" = "1" ]; then
       ARCHITECTURE="arm64" # Rosetta.
     else
       ARCHITECTURE="amd64" # Intel.
@@ -98,7 +98,7 @@ mkdir -p $FORGEUP_DIR
 echo "$FORGEUP" > $BINARY
 chmod +x $BINARY
 
-# Store the correct profile file (i.e. .profile for bash or .zshrc for ZSH)
+# Store the correct profile file (i.e. .profile for bash or .zshrc for ZSH).
 case $SHELL in
 */zsh)
     PROFILE=$HOME/.zshrc
