--- a/forgeup/install
+++ b/forgeup/install
@@ -55,25 +55,22 @@ if [[ "$FORGEUP_REPO" == "gakonst/foundry" && -z "$FORGEUP_BRANCH" ]]; then
     ARCHITECTURE="amd64" # Amd.
   fi
 
-  # Curl and unzip the downloaded Foundry tarball.
   curl -L https://github.com/${FORGEUP_REPO}/releases/download/${FORGEUP_VERSION}/foundry_${FORGEUP_VERSION}_${PLATFORM}_${ARCHITECTURE}.tar.gz | tar xvz
-
-  # Move forge and cast into the cargo bin, so they can be used as commands.
   mv forge $HOME/.cargo/bin/forge
   mv cast $HOME/.cargo/bin/cast
 else 
   FORGEUP_BRANCH=${FORGEUP_BRANCH-master}
   
-  if ! command -v cargo &> /dev/null
-  then
+  if ! command -v cargo &> /dev/null ; then
+    # Error if cargo is not already installed.
     echo "forgeup: cargo is not installed. Please install it first."
     exit 1
   fi
 
   REPO_PATH="${FORGEUP_DIR}/${FORGEUP_REPO}"
 
-  # If the repo path exists move to it, git pull, and checkout the branch & cargo install local.
   if [ -d $REPO_PATH ]; then
+    # If the repo path exists move to it, git pull, and checkout the branch & cargo install local.
     cd $REPO_PATH
     git pull
     git checkout ${FORGEUP_BRANCH}
@@ -113,7 +110,7 @@ case $SHELL in
     exit 1
 esac
 
-# Only add the forgeup directory to profile if it isn't in PATH.
+# Only add forgeup if it isn't already in PATH.
 if [[ ":$PATH:" != *":${FORGEUP_DIR}:"* ]]; then
     # Add the forgeup directory to the path and ensure the old PATH variables remain.
     echo >> $PROFILE && echo "export PATH=\"\$PATH:$FORGEUP_DIR\"" >> $PROFILE
