--- a/forgeup/install
+++ b/forgeup/install
@@ -55,6 +55,8 @@ if [[ "$FORGEUP_REPO" == "gakonst/foundry" && -z "$FORGEUP_BRANCH" ]]; then
     ARCHITECTURE="amd64" # Amd.
   fi
 
+  # Download the release tarball from the repository, unpack it and move the forge and cast binaries into the cargo bin directory.
+  # Will replace the existing binaries if they were installed via cargo, can be undone at any time by running cargo install again, if desired.
   curl -L https://github.com/${FORGEUP_REPO}/releases/download/${FORGEUP_VERSION}/foundry_${FORGEUP_VERSION}_${PLATFORM}_${ARCHITECTURE}.tar.gz | tar xvz
   mv forge $HOME/.cargo/bin/forge
   mv cast $HOME/.cargo/bin/cast
