--- a/forgeup/install
+++ b/forgeup/install
@@ -79,7 +79,7 @@ else
     git pull
     cargo install --path ./cli --bins --locked --force
   else
-    # Repo path didnt exist, grab the author from the repo, make a directory in .foundry, cd to it, clone and install.
+    # Repo path did not exist, grab the author from the repo, make a directory in .foundry, cd to it, clone and install.
     IFS="/" read -ra AUTHOR <<< "$FORGEUP_REPO"
     mkdir -p "$FORGEUP_DIR/$AUTHOR"
     cd "$FORGEUP_DIR/$AUTHOR"
