--- a/forgeup/install
+++ b/forgeup/install
@@ -3,12 +3,12 @@ set -e
 
 echo Installing forgeup...
 
-export FORGEUP_DIR=${FORGEUP_DIR-"$HOME/.forgeup"}
+FORGEUP_DIR=${FORGEUP_DIR-"$HOME/.forgeup"}
 
 FORGEUP='#!/usr/bin/env bash
 set -e
 
-export FORGEUP_DIR=${FORGEUP_DIR-"$HOME/.forgeup"}
+FORGEUP_DIR=${FORGEUP_DIR-"$HOME/.forgeup"}
 
 while [[ $1 ]]; do
   case $1 in
@@ -44,6 +44,7 @@ if [[ "$FORGEUP_REPO" == "gakonst/foundry" && -z "$FORGEUP_BRANCH" ]]; then
   ARCHITECTURE="$(uname -m)"
 
   if [ "${ARCHITECTURE}" = "x86_64" ]; then
+    # Redirect stderr to /dev/null to avoid printing errors if non Rosetta.
     if [ "$(sysctl -n sysctl.proc_translated 2>/dev/null)" = "1" ]; then
       ARCHITECTURE="arm64" # Rosetta.
     else
@@ -79,7 +80,7 @@ else
     git pull
     cargo install --path ./cli --bins --locked --force
   else
-    # Repo path did not exist, grab the author from the repo, make a directory in .foundry, cd to it, clone and install.
+    # Repo path did not exist, grab the author from the repo, make a directory in .forgeup, cd to it, clone and install.
     IFS="/" read -ra AUTHOR <<< "$FORGEUP_REPO"
     mkdir -p "$FORGEUP_DIR/$AUTHOR"
     cd "$FORGEUP_DIR/$AUTHOR"
