fix: move cargo forge & cast bins to foundry bin

--- a/foundryup/install
+++ b/foundryup/install
@@ -93,7 +93,11 @@ else
     git clone https://github.com/${FOUNDRYUP_REPO}
     cd $REPO_PATH
     git checkout ${FOUNDRYUP_BRANCH}
+
     cargo install --path ./cli --bins --locked --force
+    
+    mv ~/.cargo/bin/forge $FOUNDRY_BIN_DIR/forge
+    mv ~/.cargo/bin/cast $FOUNDRY_BIN_DIR/cast
   fi
 fi'
 
