--- a/foundryup/install
+++ b/foundryup/install
@@ -86,7 +86,7 @@ else
     git pull
     cargo install --path ./cli --bins --locked --force
   else
-    # Repo path did not exist, grab the author from the repo, make a directory in .foundryup, cd to it, clone and install.
+    # Repo path did not exist, grab the author from the repo, make a directory in .foundry, cd to it, clone and install.
     IFS="/" read -ra AUTHOR <<< "$FOUNDRYUP_REPO"
     mkdir -p "$FOUNDRY_DIR/$AUTHOR"
     cd "$FOUNDRY_DIR/$AUTHOR"
