--- a/foundryup/install
+++ b/foundryup/install
@@ -58,11 +58,9 @@ if [[ "$FOUNDRYUP_REPO" == "gakonst/foundry" && -z "$FOUNDRYUP_BRANCH" ]]; then
     ARCHITECTURE="amd64" # Amd.
   fi
 
-  # Download the release tarball from the repository, unpack it
-  curl -L https://github.com/${FOUNDRYUP_REPO}/releases/download/${FOUNDRYUP_VERSION}/foundry_${FOUNDRYUP_VERSION}_${PLATFORM}_${ARCHITECTURE}.tar.gz | tar xvz
-
-  mv forge $FOUNDRY_BIN_DIR/forge
-  mv cast $FOUNDRY_BIN_DIR/cast
+  # Download the release tarball from the canonical repository...
+  curl -L https://github.com/${FOUNDRYUP_REPO}/releases/download/${FOUNDRYUP_VERSION}/foundry_${FOUNDRYUP_VERSION}_${PLATFORM}_${ARCHITECTURE}.tar.gz 
+  | tar xvz -C $FOUNDRY_BIN_DIR # Unpack it into the .foundry bin directory.
 else 
   FOUNDRYUP_BRANCH=${FOUNDRYUP_BRANCH-master}
   
