--- a/foundryup/install
+++ b/foundryup/install
@@ -60,7 +60,7 @@ if [[ "$FOUNDRYUP_REPO" == "gakonst/foundry" && -z "$FOUNDRYUP_BRANCH" ]]; then
 
   # Download the release tarball from the canonical repository...
   curl -L https://github.com/${FOUNDRYUP_REPO}/releases/download/${FOUNDRYUP_VERSION}/foundry_${FOUNDRYUP_VERSION}_${PLATFORM}_${ARCHITECTURE}.tar.gz 
-  | tar xvz -C $FOUNDRY_BIN_DIR # Unpack it into the .foundry bin directory.
+  | tar xvC $FOUNDRY_BIN_DIR # Unpack it into the .foundry bin directory.
 else 
   FOUNDRYUP_BRANCH=${FOUNDRYUP_BRANCH-master}
   
