--- a/foundryup/install
+++ b/foundryup/install
@@ -60,7 +60,7 @@ if [[ "$FOUNDRYUP_REPO" == "gakonst/foundry" && -z "$FOUNDRYUP_BRANCH" ]]; then
 
   # Download the release tarball from the canonical repository...
   curl -L https://github.com/${FOUNDRYUP_REPO}/releases/download/${FOUNDRYUP_VERSION}/foundry_${FOUNDRYUP_VERSION}_${PLATFORM}_${ARCHITECTURE}.tar.gz 
-  | tar xvC $FOUNDRY_BIN_DIR # Unpack it into the .foundry bin directory.
+  | tar -xvzC $FOUNDRY_BIN_DIR # Unpack it into the .foundry bin directory.
 else 
   FOUNDRYUP_BRANCH=${FOUNDRYUP_BRANCH-master}
   
@@ -71,11 +71,7 @@ else
   fi
 
   REPO_PATH="${FOUNDRY_DIR}/${FOUNDRYUP_REPO}"
-
-  # Delete any previous installations if they exist as they will now be using one from cargo and we dont want conflicts
-  rm -f $FOUNDRY_BIN_DIR/forge
-  rm -f $FOUNDRY_BIN_DIR/cast
-
+  
   if [ -d $REPO_PATH ]; then
     # If the repo path exists move to it, git pull, and checkout the branch and cargo install local.
     cd $REPO_PATH
