--- a/foundryup/install
+++ b/foundryup/install
@@ -58,9 +58,8 @@ if [[ "$FOUNDRYUP_REPO" == "gakonst/foundry" && -z "$FOUNDRYUP_BRANCH" ]]; then
     ARCHITECTURE="amd64" # Amd.
   fi
 
-  # Download the release tarball from the canonical repository...
-  curl -L https://github.com/${FOUNDRYUP_REPO}/releases/download/${FOUNDRYUP_VERSION}/foundry_${FOUNDRYUP_VERSION}_${PLATFORM}_${ARCHITECTURE}.tar.gz 
-  | tar -xvzC $FOUNDRY_BIN_DIR # Unpack it into the .foundry bin directory.
+  # Download the release tarball from the canonical repository an unpack it into the .foundry bin directory.
+  curl -L https://github.com/${FOUNDRYUP_REPO}/releases/download/${FOUNDRYUP_VERSION}/foundry_${FOUNDRYUP_VERSION}_${PLATFORM}_${ARCHITECTURE}.tar.gz | tar -xvzC $FOUNDRY_BIN_DIR
 else 
   FOUNDRYUP_BRANCH=${FOUNDRYUP_BRANCH-master}
   
