--- a/foundryup/install
+++ b/foundryup/install
@@ -57,9 +57,12 @@ if [[ "$FOUNDRYUP_REPO" == "gakonst/foundry" && -z "$FOUNDRYUP_BRANCH" ]]; then
   else
     ARCHITECTURE="amd64" # Amd.
   fi
+  
+  # Compute the URL of the release tarball in the Foundry repository.
+  TARBALL_URL="https://github.com/${FOUNDRYUP_REPO}/releases/download/${FOUNDRYUP_VERSION}/foundry_${FOUNDRYUP_VERSION}_${PLATFORM}_${ARCHITECTURE}.tar.gz"
 
-  # Download the release tarball from the canonical repository an unpack it into the .foundry bin directory.
-  curl -L https://github.com/${FOUNDRYUP_REPO}/releases/download/${FOUNDRYUP_VERSION}/foundry_${FOUNDRYUP_VERSION}_${PLATFORM}_${ARCHITECTURE}.tar.gz | tar -xvzC $FOUNDRY_BIN_DIR
+  # Download the release tarball and unpack it into the .foundry bin directory.
+  curl -L $TARBALL_URL | tar -xvzC $FOUNDRY_BIN_DIR
 else 
   FOUNDRYUP_BRANCH=${FOUNDRYUP_BRANCH-master}
   
