--- a/foundryup/install
+++ b/foundryup/install
@@ -80,7 +80,8 @@ else
     git pull
     git checkout ${FOUNDRYUP_BRANCH}
     git pull
-    cargo install --path ./cli --bins --locked --force
+
+    cargo install --path ./cli --bins --locked --force --root $FOUNDRY_BIN_DIR
   else
     # Repo path did not exist, grab the author from the repo, make a directory in .foundry, cd to it, clone and install.
     IFS="/" read -ra AUTHOR <<< "$FOUNDRYUP_REPO"
