--- a/foundryup/install
+++ b/foundryup/install
@@ -57,6 +57,11 @@ if [[ "$FOUNDRYUP_REPO" == "gakonst/foundry" && -z "$FOUNDRYUP_BRANCH" ]]; then
     ARCHITECTURE="amd64" # Amd.
   fi
   
+  # Warn MacOS users that they may need to manually install libusb via Homebrew:
+  if [[ "$PLATFORM" == "darwin" && "$(pkg-config --libs usb)" != *"1"* ]]; then
+    echo "warning: libusb not found. You may need to install it manually on MacOS via Homebrew.
+  fi
+  
   # Compute the URL of the release tarball in the Foundry repository.
   TARBALL_URL="https://github.com/${FOUNDRYUP_REPO}/releases/download/${FOUNDRYUP_VERSION}/foundry_${FOUNDRYUP_VERSION}_${PLATFORM}_${ARCHITECTURE}.tar.gz"
 
