--- a/foundryup/install
+++ b/foundryup/install
@@ -58,7 +58,7 @@ if [[ "$FOUNDRYUP_REPO" == "gakonst/foundry" && -z "$FOUNDRYUP_BRANCH" ]]; then
   fi
   
   # Warn MacOS users that they may need to manually install libusb via Homebrew:
-  if [[ "$PLATFORM" == "darwin" && "$(pkg-config --libs usb)" != *"1"* ]]; then
+  if [[ "$PLATFORM" == "darwin" && ! -f /usr/local/opt/libusb/lib/libusb-1.0.0.dylib ]]; then
     echo "warning: libusb not found. You may need to install it manually on MacOS via Homebrew.
   fi
   
