install: respect unix file-hierarchy
Install foundry binaries in the standard `~/.local/`
directory on unix systems.
Especially on Linux man pages are automatically read from
`~/.local/share/man/man1` directory without manually including that
path in the `MANPATH` environment variable.

--- a/foundryup/install
+++ b/foundryup/install
@@ -3,14 +3,14 @@ set -e
 
 echo Installing foundryup...
 
-FOUNDRY_DIR=${FOUNDRY_DIR-"$HOME/.foundry"}
+FOUNDRY_DIR=${FOUNDRY_DIR-"$HOME/.local"}
 FOUNDRY_BIN_DIR="$FOUNDRY_DIR/bin"
 FOUNDRY_MAN_DIR="$FOUNDRY_DIR/share/man/man1"
 
 FOUNDRYUP='#!/usr/bin/env bash
 set -e
 
-FOUNDRY_DIR=${FOUNDRY_DIR-"$HOME/.foundry"}
+FOUNDRY_DIR=${FOUNDRY_DIR-"$HOME/.local"}
 FOUNDRY_BIN_DIR="$FOUNDRY_DIR/bin"
 FOUNDRY_MAN_DIR="$FOUNDRY_DIR/share/man/man1"
 
