--- a/foundryup/install
+++ b/foundryup/install
@@ -21,7 +21,7 @@ while [[ $1 ]]; do
     -r|--repo)        shift; FOUNDRYUP_REPO=$1;;
     -b|--branch)      shift; FOUNDRYUP_BRANCH=$1;;
     -v|--version)     shift; FOUNDRYUP_VERSION=$1;;
-    --path)           shift; FOUNDRYUP_LOCAL_REPO=$1;;
+    -p|--path)        shift; FOUNDRYUP_LOCAL_REPO=$1;;
     -h|--help)        FOUNDRYUP_HELP="1";;
 
     *) printf "foundryup: internal error: %q\\n" "$1"; exit 1
@@ -38,17 +38,17 @@ OPTIONS:
     -h, --help      Print help information
     -v, --version   Install a specific version
     -b, --branch    Install a specific branch
-    -r, --repo      Install a forks main branch"
+    -r, --repo      Install a forks main branch
+    -p, --path      Install a local repository"
     exit 0
 fi
 
 # Installs foundry from a local repository if --path parameter is provided
 if [[ -n "$FOUNDRYUP_LOCAL_REPO" ]]; then
-  echo "Installing from a local foundry repository"
 
   # Ignore branches/versions as we do not want to modify local git state
-  if [ -n "$FOUNDRYUP_REPO" ] || [ -n "$FOUNDRY_BRANCH" || [ -n "$FOUNDRY_VERSION" ]]; then
-    echo "foundryup: WARN --branch, --version, and --repo arguments are ignored during local install"
+  if [ -n "$FOUNDRYUP_REPO" ] || [ -n "$FOUNDRY_BRANCH" ] || [ -n "$FOUNDRY_VERSION" ]; then
+    echo "foundryup: !WARN! --branch, --version, and --repo arguments are ignored during local install"
   fi
 
   if ! command -v cargo &> /dev/null ; then
@@ -59,11 +59,11 @@ if [[ -n "$FOUNDRYUP_LOCAL_REPO" ]]; then
 
   # Enter local repo and build
   FOUNDRY_REPO="$PWD/$FOUNDRYUP_LOCAL_REPO"
-  echo "Installing from $FOUNDRY_REPO"
+  echo "foundryup: installing from $FOUNDRY_REPO"
   cd $FOUNDRY_REPO
   cargo build --release
 
-  # Remove existing installations if they exist
+  # Remove prior installations if they exist
   rm -f "$FOUNDRY_BIN_DIR/forge"
   rm -f "$FOUNDRY_BIN_DIR/cast"
 
