--- a/foundryup/install
+++ b/foundryup/install
@@ -58,9 +58,8 @@ if [[ -n "$FOUNDRYUP_LOCAL_REPO" ]]; then
   fi
 
   # Enter local repo and build
-  FOUNDRY_REPO="$PWD/$FOUNDRYUP_LOCAL_REPO"
-  echo "foundryup: installing from $FOUNDRY_REPO"
-  cd $FOUNDRY_REPO
+  echo "foundryup: installing from $FOUNDRYUP_LOCAL_REPO"
+  cd $FOUNDRYUP_LOCAL_REPO
   cargo build --release
 
   # Remove prior installations if they exist
